@@ -9,6 +9,9 @@ License: GPL 2.0
 
 volatile int terminate_asap = 0;
 
+struct ccx_s_options ccx_options;
+struct lib_ccx_ctx *signal_ctx;
+
 void sigusr1_handler(int sig)
 {
 	mprint("Caught SIGUSR1. Filename Change Requested\n");
