@@ -371,7 +371,7 @@ void ccx_dtvcc_process_service_block(ccx_dtvcc_ctx *dtvcc,
 									 unsigned char *data,
 									 int data_length);
 
-ccx_dtvcc_pen_color ccx_dtvcc_default_pen_color;
-ccx_dtvcc_pen_attribs ccx_dtvcc_default_pen_attribs;
+extern ccx_dtvcc_pen_color ccx_dtvcc_default_pen_color;
+extern ccx_dtvcc_pen_attribs ccx_dtvcc_default_pen_attribs;
 
 #endif
