@@ -16,6 +16,7 @@
 - Fix: lib_ccx.c: Initialize fatal error logging function before first usage in init_libraries
 - Fix: A few (minor) memory leaks around the code.
 - Fix: General code clean up / reformatting
+- Fix: Fix multiple definitions with new -fno-common default in GCC 10
 - Doc: Updated ccextractor.cnf.sample.
 
 0.88 (2019-05-21)
